Revise privacy policy summary and data storage details

--- a/privacy.html
+++ b/privacy.html
@@ -17,7 +17,7 @@
   <p><strong>Effective date:</strong> 2026-02-17</p>
 
   <div class="box">
-    <p><strong>Summary:</strong> Vocatbulary does not collect personal data from users. Learning progress may be stored locally on the device and can be synced via iCloud if the user has iCloud enabled.</p>
+    <p><strong>Summary:</strong> Vocatbulary does not collect personal data from users. Learning progress is stored on the device and can be synced via iCloud if the user enables iCloud.</p>
   </div>
 
   <h2>1) Who we are</h2>
@@ -28,14 +28,13 @@
   <p><strong>We do not collect personal data</strong> from the App (no analytics tracking, no advertising identifiers, no third-party trackers).</p>
 
   <h2>3) Data stored on your device</h2>
-  <p>The App stores learning data such as:</p>
+  <p>The App stores learning data locally on your device, for example:</p>
   <ul>
     <li>selected dictionaries and word lists (including imported CSV lists),</li>
     <li>answers (right/wrong), spaced repetition schedule,</li>
     <li>progress metrics (accuracy, streaks, XP/level),</li>
     <li>app preferences (languages, reminders settings).</li>
   </ul>
-  <p>This data is stored locally on your device.</p>
 
   <h2>4) iCloud sync</h2>
   <p>If you have iCloud enabled, the App can sync your learning progress across your devices using Apple iCloud/CloudKit. Apple may process this data as part of providing iCloud services.</p>
